# yolo_ros

./: .gitignore  CMakeLists.txt  README.md  nodelet_description.xml  object_list.txt  package.xml  requirements.txt
config/: config.yaml
docs/: INSTALL_PROBLEMS.md
inc/: object_detect.h
launch/: openloris.launch  yolo_atlas_nodelet.launch  yolo_service.launch  yolo_tensorrt.launch
msg/: DetectionMessage.msg  DetectionMessages.msg
scripts/: yolo_trt_ros.py  yolov5_tensorrt.py
src/: demo_service_server.py  model_process.cpp  object_detect_ros.cpp  service_client.cpp  yolo_atlas_nodelet.cpp
src/yolo_bridge/: yolo_bridge.py
